--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -15,11 +15,21 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  # Recommended dependencies for drift
+  drift: ^2.7.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.8.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+  # Recommended dependencies for drift
+  drift_dev: ^2.7.0
+  build_runner: ^2.3.3
 
 flutter:
   uses-material-design: true
