--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # Riverpod dependencies
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.3.6
+  go_router: ^7.0.0
 
 dev_dependencies:
   flutter_test:
