--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  custom_lint: ^0.3.4
+  riverpod_lint: ^1.3.1
 
   # Recommended dependencies for drift
   drift_dev: ^2.7.0
