--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.3.6
   go_router: ^7.0.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
