--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -25,8 +25,14 @@ dependencies:
   # Riverpod dependencies
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.3.6
+
+  # Navigation
   go_router: ^7.0.0
+
+  # Data Types
   uuid: ^3.0.7
+
+  protobuf: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -36,9 +42,10 @@ dev_dependencies:
   custom_lint: ^0.3.4
   riverpod_lint: ^1.3.1
 
-  # Recommended dependencies for drift
-  drift_dev: ^2.7.0
   build_runner: ^2.3.3
+
+  drift_dev: ^2.7.0
+  protoc_builder: ^0.3.1
 
 flutter:
   uses-material-design: true
