--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -7,8 +7,8 @@ null_safety: true
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
-  flutter: ">=3.0.0"
+  sdk: '>=3.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
 
   # Recommended dependencies for drift
-  drift: ^2.7.0
+  drift: ^2.8.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.0
   path: ^1.8.2
@@ -39,12 +39,12 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  custom_lint: ^0.3.4
+  custom_lint: ^0.4.0
   riverpod_lint: ^1.3.1
 
   build_runner: ^2.3.3
 
-  drift_dev: ^2.7.0
+  drift_dev: ^2.8.0
   protoc_builder: ^0.3.1
 
 flutter:
