--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -4,7 +4,8 @@ description: A new Flutter project.
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 null_safety: true
-version: 1.0.0+1
+version: "2.0.0"
+build_number: 1
 
 environment:
   sdk: '>=3.0.0'
@@ -34,6 +35,9 @@ dependencies:
 
   protobuf: ^2.1.0
   shared_preferences: ^2.1.1
+  collection: ^1.17.1
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -43,10 +47,12 @@ dev_dependencies:
   custom_lint: ^0.4.0
   riverpod_lint: ^1.3.1
 
-  build_runner: ^2.3.3
+  build_runner: ^2.4.4
 
   drift_dev: ^2.8.0
   protoc_builder: ^0.3.1
+  freezed: ^2.3.4
+  json_serializable: ^6.6.2
 
 flutter:
   uses-material-design: true
