--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
     sdk: flutter
 
   # Recommended dependencies for drift
-  drift: ^2.8.0
+  drift: &drift ^2.8.0
+  drift_dev: *drift
+  sqlite3: ^1.11.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.0
   path: ^1.8.2
@@ -48,8 +50,8 @@ dev_dependencies:
   riverpod_lint: ^1.3.1
 
   build_runner: ^2.4.4
+  build_web_compilers: ^4.0.3
 
-  drift_dev: ^2.8.0
   protoc_builder: ^0.3.1
   freezed: ^2.3.4
   json_serializable: ^6.6.2
