--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,8 +18,7 @@ dependencies:
     sdk: flutter
 
   # Recommended dependencies for drift
-  drift: &drift ^2.8.0
-  drift_dev: *drift
+  drift: ^2.8.0
   sqlite3: ^1.11.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.0
@@ -48,6 +47,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   custom_lint: ^0.4.0
   riverpod_lint: ^1.3.1
+  drift_dev: ^2.8.0
 
   build_runner: ^2.4.4
   build_web_compilers: ^4.0.3
