--- a/app/build.yaml
+++ b/app/build.yaml
@@ -5,12 +5,18 @@ targets:
       - pubspec.*
       - lib/$lib$
       - lib/src/data/**.dart
+      - web/**
       - proto/** # Your .proto directory
     builders:
 
       # We have a designated target for this step.
       build_web_compilers:dart2js_archive_extractor:
         enabled: false
+      build_web_compilers:entrypoint:
+        generate_for:
+          # This one is compiled in the other target
+          exclude:
+            - "web/database_worker.dart"
       drift_dev:
         generate_for:
           - lib/src/data/**.dart # Your .proto directory
