--- a/app/build.yaml
+++ b/app/build.yaml
@@ -10,13 +10,13 @@ targets:
     builders:
 
       # We have a designated target for this step.
-      build_web_compilers:dart2js_archive_extractor:
-        enabled: false
-      build_web_compilers:entrypoint:
-        generate_for:
-          # This one is compiled in the other target
-          exclude:
-            - "web/database_worker.dart"
+      # build_web_compilers:dart2js_archive_extractor:
+      #   enabled: false
+      # build_web_compilers:entrypoint:
+      #   generate_for:
+      #     # This one is compiled in the other target
+      #     exclude:
+      #       - "web/database_worker.dart"
       drift_dev:
         generate_for:
           - lib/src/data/**.dart # Your .proto directory
@@ -34,21 +34,21 @@ targets:
   # If you're ok with compiling everything with dart2js, just use
   # `compiler: dartj2s` on the options of the default target and ignore the two
   # additional targets here.
-  dart2js_archives:
-    auto_apply_builders: false
-    dependencies: [":$default", ":worker"]
-    builders:
-      build_web_compilers:dart2js_archive_extractor:
-        enabled: true
-  worker:
-    auto_apply_builders: false
-    dependencies: [":$default"]
-    builders:
-      build_web_compilers:entrypoint:
-        enabled: true
-        generate_for:
-          - web/database_worker.dart
-        options:
-          compiler: dart2js
-      build_web_compilers:dart2js_archive_extractor:
-        enabled: false
+  # dart2js_archives:
+  #   auto_apply_builders: false
+  #   dependencies: [":$default", ":worker"]
+  #   builders:
+  #     build_web_compilers:dart2js_archive_extractor:
+  #       enabled: true
+  # worker:
+  #   auto_apply_builders: false
+  #   dependencies: [":$default"]
+  #   builders:
+  #     build_web_compilers:entrypoint:
+  #       enabled: true
+  #       generate_for:
+  #         - web/database_worker.dart
+  #       options:
+  #         compiler: dart2js
+  #     build_web_compilers:dart2js_archive_extractor:
+  #       enabled: false
