--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -8,8 +8,8 @@ version: "2.0.0"
 build_number: 1
 
 environment:
-  sdk: '>=3.0.0'
-  flutter: ">=3.10.0"
+  sdk: '^3.0.0'
+  flutter: "^3.10.0"
 
 dependencies:
   flutter:
