network access to davinci (test)

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   pretty_diff_text: ^1.0.0
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
