--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   pretty_bytes: ^6.1.0
   async: ^2.11.0
   file_picker: ^5.3.1
+  supabase_flutter: ^1.10.1
 
 dev_dependencies:
   flutter_test:
