--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -14,12 +14,12 @@ jobs:
           flutter-version: '3.x'
           channel: 'stable'
 
-      - name: Enter app dir
-        run: cd app
-
       - name: Install dependencies
+        working-directory: ./app
         run: flutter pub get
 
-      - run: flutter build macos
+      - working-directory: ./app
+        run: flutter build macos
 
-      - run: flutter build ios --no-codesign
+      - working-directory: ./app
+        run: flutter build ios --no-codesign
