--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,7 +25,7 @@ jobs:
         run: flutter build web
 
       - working-directory: ./app
-        run: flutter build android --no-codesign
+        run: flutter build android
 
       - working-directory: ./app
         run: flutter build linux --release
