--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -8,6 +8,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{ env.java_version }}
+
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -25,7 +29,7 @@ jobs:
         run: flutter build web
 
       - working-directory: ./app
-        run: flutter build android
+        run: flutter build apk
 
       - working-directory: ./app
         run: flutter build linux --release
