--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -8,9 +8,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
-          java-version: ${{ env.java_version }}
+          java-version: 11
+          cache: gradle
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
