--- a/app/volume_plugin/pubspec.yaml
+++ b/app/volume_plugin/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
